welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:7: error: not found: value abA3040
	return (apA3040 && abA3040) || (apA4050 && abA4050)
                           ^